added basepath to apis and dummies for all controllers
