# public/swagger.yaml
@@ -13,8 +13,14 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-- url: https://localhost:3200/
-- url: http://localhost:3200/
+- url: /{basePath}
+  variables:
+    basePath:
+      default: api
+- url: /{basePath}
+  variables:
+    basePath:
+      default: api
 tags:
 - name: donations
   description: List and add donations
@@ -169,7 +175,7 @@ paths:
       - devices
       summary: Returns device inventories by status
       description: Returns a list of devices
-      operationId: getDeviceInventory
+      operationId: listDevices
       parameters:
       - name: location
         in: query
